--- a/buzzverse-frontend/src/components/topbar/topbar.css
+++ b/buzzverse-frontend/src/components/topbar/topbar.css
@@ -1,7 +1,3 @@
-body{
-    margin: 0px;
-}
-
 .topbarContainer{
     height: 50px;
     width: 100%;
@@ -10,6 +6,7 @@ body{
     top: 0;
     display: flex;
     align-items: center;
+    z-index: 999;
 }
 
 .topbarLeft{
