--- a/buzzverse-frontend/src/components/rightbar/rightbar.css
+++ b/buzzverse-frontend/src/components/rightbar/rightbar.css
@@ -40,3 +40,54 @@
     margin: 0;
     list-style: none;
 }
+
+.profileRightbarTitle{
+    font-size: 19px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.rightbarInfo{
+    margin-bottom: 50px;
+}
+
+.rightbarInfoItem{
+    margin-bottom: 10px;
+}
+
+.rightbarInfoKey{
+    font-size: 17px;
+    font-weight: 500;
+    color: #555;
+}
+
+.rightbarInfoValue{
+    font-size: 15px;
+    font-weight: 300;
+}
+
+.rightbarUserFollowings{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.rightbarUserFollowing{
+    display: flex;
+    flex-direction: column;
+    margin: 0px 30px 20px 0px;
+    cursor: pointer;
+}
+
+.rightbarUserFollowingImg{
+    width: 70px;
+    height: 70px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin-bottom: 2px;
+}
+
+.rightbarUserFollowingName{
+    width: 70px;
+    font-size: 14px;
+    font-weight: 400;
+}
